Small Logo Align Fix

--- a/assets/stylesheets/styles.scss
+++ b/assets/stylesheets/styles.scss
@@ -33,7 +33,7 @@ thead {
     margin-right: 1em;
 }
 .logo--small {
-    margin-top: .1em;
+    margin-top: .35em;
     margin-right: 1.5em;
       -webkit-animation: fadein .7s;
   animation: fadein .7s;
